Fix landing page: hide overflow

--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,10 @@
+* {
+    box-sizing: border-box;
+}
+html, body {
+    overflow: hidden;
+}
+
 body {
     display: flex;
     justify-content: center;
@@ -42,10 +49,11 @@ body {
 .btn-container Button {
     font-size: 1.5rem;
     background-color: black;
-    color:lightgray;
+    color:white;
     padding: 2rem;
     margin: 0 1rem;
     border-radius: 10px;
+    border: 2px solid black;
     border: none;
 }
 
@@ -57,5 +65,5 @@ body {
     margin: 0 1rem;
     border-radius: 10px;
     border: 2px solid black;
-    transition: ease 0.5s;
+    transition: ease-in-out 0.5s;
 }
